# geoembed_twin

./: .gitignore  README.md  __main__.py  diagnostics.py  environment.yml  pipeline.py  pyproject.toml  requirements-optional.txt  selftest.py  setup.cfg  utils.py
adapters/: __init__.py  ggs_depth_adapter.py  repo_scan.py  sfvae_adapter.py
depth/: camera.py  stochastic_depth.py
docs/: DESIGN.md
gaussians/: io.py  synthetic.py
scripts/: install_optional_deps.sh  run_demo.sh  train_sfvae.sh
sfvae/: embed.py  loss.py  model.py  sh.py  submanifold.py  train.py
tests/: test_depth_monotonic.py  test_quat_sign_invariance.py
twin/: change.py  depth_residual.py  floater_filter.py  match.py
viz/: open3d_viewer.py  plot_depth.py  ply_export.py
