[metadata]
name = geoembed_twin
version = 0.2.0
description = GeoEmbedTwin: SF-VAE embeddings + stochastic-solids depth
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    torch
    numpy
    matplotlib
    imageio>=2.9
    plyfile
